--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "vitest": "^0.28.5"
   },
   "dependencies": {
+    "@trpc/client": "^10.38.3",
+    "@trpc/react-query": "^10.38.3",
+    "@trpc/server": "^10.38.3",
+    "prisma": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
