--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@trpc/server": "^10.38.3",
     "prisma": "^5.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "superjson": "^1.13.1",
+    "zod": "^3.22.2"
   }
 }
