--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
