--- a/package.json
+++ b/package.json
@@ -17,21 +17,31 @@
     "@rakkasjs/eslint-config": "0.6.20",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.15",
+    "daisyui": "^3.7.4",
     "eslint": "^8.34.0",
+    "postcss": "^8.4.29",
     "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "rakkasjs": "0.6.20",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-elevation": "^2.0.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.3",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.28.5"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.38.3",
     "@trpc/react-query": "^10.38.3",
     "@trpc/server": "^10.38.3",
     "prisma": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "superjson": "^1.13.1",
     "zod": "^3.22.2"
   }
