--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.29",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "prisma": "^5.3.1",
     "rakkasjs": "0.6.20",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3",
@@ -31,18 +32,23 @@
     "typescript": "^4.9.5",
     "vite": "^4.1.3",
     "vite-tsconfig-paths": "^4.0.5",
-    "vitest": "^0.28.5"
+    "vitest": "^0.28.5",
+    "zod-prisma-types": "^2.7.9"
   },
   "dependencies": {
+    "@prisma/client": "5.3.1",
     "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.38.3",
     "@trpc/react-query": "^10.38.3",
     "@trpc/server": "^10.38.3",
-    "prisma": "^5.3.1",
+    "@unpic/react": "^0.0.34",
+    "devalue": "^4.3.2",
+    "lucide-react": "^0.277.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
     "superjson": "^1.13.1",
+    "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
   }
 }
